--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 </head>
 
 <body>
-  <!-- <div class="roleta-container">
+  <div class="roleta-container">
     <img class="roleta" src="img/roleta.png" alt="">
-  </div> -->
-
-  <div class="roleta-div">
-
   </div>
+
   <button class="btn">GIRAR</button>
 
 
