--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Roleta</title>
 </head>
 
 <body>
-  <div class="roleta-container">
-    <img class="roleta" src="img/roleta.png" alt="">
+  <div class="container main-container">
+    <div class="h1-texto">
+      <img class="logo" src="img/logo.png" alt="">
+      <h1>Você <span class="r">ganhou 1 giro grátis</span> na roleta premiada!</h1>
+      <h2>Gire para ganhar agora!</h2>
+    </div>
+    <div class="roleta-container">
+      <div class="roleta-img-container">
+        <img class="roleta" src="img/roleta.png" alt="">
+      </div>
+      <button class="btn">GIRE PARA GANHAR</button>
+    </div>
+    <div class="popup">
+      <div class="popup-text">
+        <h1>Você ganhou!</h1>
+        <p>Para resgatar seu prêmio, clique abaixo:</p>
+        <a href="https://claro.bet/" class="btn">RESGATE O SEU PRÊMIO</a>
+      </div>
+
+
+    </div>
   </div>
 
-  <button class="btn">GIRAR</button>
 
 
 
