--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="h1-texto">
       <img class="logo" src="./img/logo.png" alt="">
       <h1>Você <span class="r">ganhou 1 giro grátis</span> na roleta premiada!</h1>
-      <h2>Gire para ganhar agora!</h2>
+      <h2>Gire para ganhar!</h2>
     </div>
     <div class="roleta-container">
       <div class="roleta-img-container">
