--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <div class="roleta-img-container">
         <img class="roleta" src="./img/roleta.png" alt="">
       </div>
+      <audio id="rouletteAudio" src="audio/roulette-spinning.mp3"></audio>
+      <audio id="rouletteSuccess" src="audio/success-trumpets.mp3"></audio>
       <button class="btn">GIRE PARA GANHAR</button>
     </div>
   </div>
