--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <div class="container main-container">
     <div class="h1-texto">
       <img class="logo" src="./img/logo.png" alt="">
-      <h1>Você <span class="r">ganhou 1 giro grátis</span> na roleta premiada!</h1>
-      <h2>Gire para ganhar!</h2>
+      <h1>Você <span class="r">ganhou 1 giro duplo grátis</span> na roleta!</h1>
+      <h2>Gire para ganhar em dobro!</h2>
+      <p class="warning"><span class="r">Aguarde</span> seu próximo giro!</p>
     </div>
     <div class="roleta-container">
       <div class="roleta-img-container">
@@ -29,8 +30,9 @@
   </div>
   <div class="popup">
     <div class="popup-text">
-      <h1>Você ganhou!</h1>
-      <p>Para resgatar seu prêmio, clique abaixo:</p>
+      <h1>Você ganhou em dobro!</h1>
+      <h1 class="r">CONTA VIP PREMIUM + 20 GIROS GRÁTIS</h1>
+      <p>Para resgatar seus prêmios, clique abaixo:</p>
       <a href="https://claro.bet/" class="btn">RESGATE O SEU PRÊMIO</a>
     </div>
   </div>
