--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>Você ganhou em dobro!</h1>
       <h1 class="r">CONTA VIP PREMIUM + 20 GIROS GRÁTIS</h1>
       <p>Para resgatar seus prêmios, clique abaixo:</p>
-      <a href="https://claro.bet/" class="btn">RESGATE O SEU PRÊMIO</a>
+      <a href="https://sshortly.net/4d6b1f9" class="btn">RESGATE O SEU PRÊMIO</a>
     </div>
   </div>
 
