--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="roleta-container">
       <div class="roleta-img-container">
-        <img class="roleta" src="./img/roleta.png" alt="">
+        <img class="roleta" src="./img/roleta-2.png" alt="">
       </div>
       <audio id="rouletteAudio" src="audio/roulette-spinning.mp3"></audio>
       <audio id="rouletteSuccess" src="audio/success-trumpets.mp3"></audio>
