--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css?v=1.22">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.min.css?v=1.23">
+  <link rel="preload" as="style" href="css/style.min.css?v=1.23">
+
+
+  <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-regular.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-700.woff2">
+  
+  <link rel="preload" as="image" href="img/bg.webp">
+  <link rel="preload" as="image" href="img/logo.png">
+  <link rel="preload" as="image" href="img/bg-mobile.webp" media="max-width(450px)">
+  <link rel="preload" as="image" href="img/roleta.webp">
+
+
   <title>Roleta</title>
 </head>
 
 <body>
   <div class="container main-container">
     <div class="h1-texto">
-      <img class="logo" src="./img/logo.png" alt="">
+      <img class="logo" src="./img/logo.png" alt="" width="240px">
       <h1>Você <span class="r">ganhou 1 giro duplo grátis</span> na roleta!</h1>
       <h2>Gire para ganhar em dobro!</h2>
       <p class="warning"><span class="r">Aguarde</span> seu próximo giro!</p>
     </div>
     <div class="roleta-container">
       <div class="roleta-img-container">
-        <img class="roleta" src="./img/roleta-2.png" alt="">
+        <img class="roleta" src="./img/roleta.webp" alt="">
       </div>
       <audio id="rouletteAudio" src="audio/roulette-spinning.mp3"></audio>
       <audio id="rouletteSuccess" src="audio/success-trumpets.mp3"></audio>
@@ -40,7 +49,7 @@
 
 
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 
 </html>
