--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-regular.woff2">
   <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-700.woff2">
-  
+
   <link rel="preload" as="image" href="img/bg.webp">
   <link rel="preload" as="image" href="img/logo.png">
   <link rel="preload" as="image" href="img/bg-mobile.webp" media="max-width(450px)">
   <link rel="preload" as="image" href="img/roleta.webp">
 
 
-  <title>Roleta</title>
+  <title>Gire para ganhar | Roleta dupla da sorte</title>
 </head>
 
 <body>
