--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?v=1.23">
-  <link rel="preload" as="style" href="css/style.min.css?v=1.23">
+  <link rel="stylesheet" href="css/style.css?v=1.23">
+  <link rel="preload" as="style" href="css/style.css?v=1.23">
 
 
   <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-regular.woff2">
@@ -25,7 +25,21 @@
     <div class="h1-texto">
       <img class="logo" src="./img/logo.png" alt="" width="240px">
       <h1>Você <span class="r">ganhou 1 giro duplo grátis</span> na roleta!</h1>
-      <h2>Gire para ganhar em dobro!</h2>
+      <ul class="steps-box">
+        <li>
+          <div class="steps">1</div>
+          <div class="steps-text">Gire</div>
+        </li>
+        <li>
+          <div class="steps">2</div>
+          <div class="steps-text">Descubra seu prêmio</div>
+        </li>
+        <li>
+          <div class="steps">3</div>
+          <div class="steps-text">Resgate sua recompensa</div>
+        </li>
+      </ul>
+      <!-- <h2>Gire para ganhar em dobro!</h2> -->
       <p class="warning"><span class="r">Aguarde</span> seu próximo giro!</p>
     </div>
     <div class="roleta-container">
@@ -39,9 +53,9 @@
   </div>
   <div class="popup">
     <div class="popup-text">
-      <h1>Você ganhou em dobro!</h1>
-      <h1 class="r">CONTA VIP PREMIUM + 20 GIROS GRÁTIS</h1>
-      <p>Para resgatar seus prêmios, clique abaixo:</p>
+      <img src="./img/premio.webp" alt="premio">
+      <h2 class="r">🚨 POR TEMPO LIMITADO 🚨</h2>
+      <p>Resgate seu prêmio fazendo seu cadastro e uma recarga mínima de R$20,00</p>
       <a href="https://sshortly.net/4d6b1f9" class="btn">RESGATE O SEU PRÊMIO</a>
     </div>
   </div>
