working-sounds add

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         </li>
       </ul>
       <!-- <h2>Gire para ganhar em dobro!</h2> -->
-      <p class="warning"><span class="r">Aguarde</span> seu próximo giro!</p>
+      <div class="warning">
+        <p class="aviso1"><span class="r">Prêmio 1 liberado:</span> Conta VIP Premium</p>
+        <p class="aviso2"><span class="r">Prêmio 2:</span> Aguarde o próximo giro</p>
+      </div>
     </div>
     <div class="roleta-container">
       <div class="roleta-img-container">
@@ -48,6 +51,7 @@
       </div>
       <audio id="rouletteAudio" src="audio/roulette-spinning.mp3"></audio>
       <audio id="rouletteSuccess" src="audio/success-trumpets.mp3"></audio>
+      <audio id="notification" src="audio/notification.mp3"></audio>
       <button class="btn">GIRE PARA GANHAR</button>
     </div>
   </div>
