--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
       <a href="https://sshortly.net/4d6b1f9" class="btn">RESGATE O SEU PRÊMIO</a>
     </div>
   </div>
+  <footer class="container footer">
+    <div class="footer-links">
+      <a href="https://www.claro.bet/terms-and-conditions">Termos de uso</a>
+      <a href="https://www.claro.bet/privacy-policy">Política de privacidade</a>
+    </div>
+    <div class="footer-text">
+      <p>www.claro.bet , é operado pela SuperJogos NV, Registro Comercial de Curaçao nº 157878, localizado em Emancipatie Boulevard, Dominico F. “Don” Martina, 31, Willemstad, Curaçao.
+      </p>
+      <p>SuperJogos NV é devidamente licenciado, sublicença concedida por CIL Curaçao Interactive Licensing NV, nos termos da Master Gaming License #5536/JAZ publicada pelo Governo de Curaçao.
+      </p>
 
+    </div>
+  </footer>
 
 
 
