--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   </div>
   <footer class="container footer">
     <div class="footer-links">
-      <a href="https://www.claro.bet/terms-and-conditions">Termos de uso</a>
-      <a href="https://www.claro.bet/privacy-policy">Política de privacidade</a>
+      <a target="_blank" href="https://www.claro.bet/terms-and-conditions">Termos de uso</a>
+      <a target="_blank" href="https://www.claro.bet/privacy-policy">Política de privacidade</a>
     </div>
     <div class="footer-text">
       <p>www.claro.bet , é operado pela SuperJogos NV, Registro Comercial de Curaçao nº 157878, localizado em Emancipatie Boulevard, Dominico F. “Don” Martina, 31, Willemstad, Curaçao.
