--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
   <footer class="container footer">
     <div class="footer-links">
-      <a target="_blank" href="https://www.claro.bet/terms-and-conditions">Termos de uso</a>
+      <a target="_blank" href="https://www.claro.bet/terms-and-conditions">Termos e condições</a>
       <a target="_blank" href="https://www.claro.bet/privacy-policy">Política de privacidade</a>
     </div>
     <div class="footer-text">
