--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css?v=1.23">
-  <link rel="preload" as="style" href="css/style.css?v=1.23">
+  <link rel="stylesheet" href="css/style.min.css?v=1.33">
+  <link rel="preload" as="style" href="css/style.min.css?v=1.33">
 
 
   <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="fonts/saira-v20-latin-regular.woff2">
